# dynamic_labor

./: .gitmodules  README.md  calculate_utility.m  calculate_utility_f.m  calculate_wage.m  char_matrix.mat  choose.m  deductions_exemptions.out  draw_husband.m  draw_wife.m  emp_moments.txt  emp_moments_stdev.txt  estimation_f.m  estimation_init.m  estimation_parameters.m  full_run_output.txt  general_moments.txt  general_moments_stdev.txt  get_global_param_idx.m  gross_to_net.m  group_exp.m  husbands.out  husbands.xlsx  husbands_1.out  husbands_2.out  husbands_3.out  husbands_4.out  husbands_5.out  increment_moment.m  init_parameters.txt  init_parameters_new.txt  marr_fer_moments.txt  marr_fer_moments_stdev.txt  marriage_decision.m  married_couple.m  married_loop.m  min_estimation.m  minestimation_ga.m  minestimation_simplex.m  minestimation_std.m  (+13 more)
.github/workflows/: ccpp.yml
c++/: .gitignore  CMakeLists.txt  README.md  calculate_utility.cpp  calculate_utility.h  calculate_utility_test.h  calculate_wage.cpp  calculate_wage.h  calculate_wage_test.h  const_parameters.h  draw_husband.cpp  draw_husband.h  draw_test.h  draw_wife.cpp  draw_wife.h  dynamic_labor.cpp  emax.cpp  emax.h  gross_to_net.cpp  gross_to_net.h  gross_to_net_test.h  load_files.cpp  load_files.h  marriage_decision.cpp  marriage_decision.h  marriage_decision_test.h  marriage_emp_decision.cpp  marriage_emp_decision.h  marriage_emp_decision_test.h  married_couple.cpp  married_couple.h  matrix.h  matrix_test.h  moments.h  nash.cpp  nash.h  nash_test.h  objective_function.cpp  objective_function.h  parameters.cpp  (+14 more)
